<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description"/>
        <EditText
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/edt_description2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id"/>
        <EditText
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/edt_id2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"/>
        <EditText
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/edt_price2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/producer"/>
        <EditText
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/edt_producer2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product"/>
        <EditText
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/edt_productname2"/>
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="horizontal">
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/edit"
           android:id="@+id/btn_edit"/>
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/save"
           android:id="@+id/btn_save"/>
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/cancel"
           android:id="@+id/btn_cancel"/>
   </LinearLayout>

</LinearLayout>