<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/liner"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description"/>
        <TextView
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/txt_description"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id"/>
        <TextView
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/txt_id"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"/>
        <TextView
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/txt_price"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/producer"/>
        <TextView
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/txt_producer"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product"/>
        <TextView
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/txt_product_name"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_delete"
        android:text="@string/delete"
        android:layout_marginHorizontal="120dp"/>

</LinearLayout>
