<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AddActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description"/>
        <EditText
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/edt_description"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id"/>
        <EditText
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/edt_id"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"/>
        <EditText
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/edt_price"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/producer"/>
        <EditText
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/edt_producer"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product"/>
        <EditText
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/edt_productname"/>
    </LinearLayout>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="200dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btnAdd"
        android:text="@string/Add"/>

</LinearLayout>